[package]
name = "rust-crypto"
version = "0.2.36"
authors = ["The Rust-Crypto Project Developers"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/DaGenix/rust-crypto/"
repository = "https://github.com/DaGenix/rust-crypto/"
description = "A (mostly) pure-Rust implementation of various common cryptographic algorithms."
keywords = ["Crypto", "MD5", "Sha1", "Sha2", "AES"]
readme = "README.md"
#build = "build.rs"

[lib]
name = "crypto"

[features]
with-bench = []

#[build-dependencies]
#gcc = "^0.3"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] }

[dependencies]
rand = { tag="v0.7.3_sgx1.1.3", git = "https://github.com/mesalock-linux/rand-sgx.git" }
rustc-serialize = { version = "0.3.24", git = "https://github.com/mesalock-linux/rustc-serialize-sgx.git" }

